--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "usemin-cli": "^0.6.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "tooltip": "^1.6.1"
   }
 }
